# weather-forecast

./: .dockerignore  .gitignore  README.md  chapter4_backend.md  chapter5_frontend.md  chapter6_docker.md  docker-compose.yml  docker_chapter.md  frontend_chapter.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  main.py
backend/api/: api_router.py
backend/config/: .env  settings.py
backend/schemas/: __init__.py  forecast.py
backend/services/: __init__.py  predict.py  predict_v2.py  station.py
backend/tests/: conftest.py  test_forecast.py
backend/utils/: cache.py
db/cassandra/: Dockerfile  cassandra-init.sh  entrypoint.sh  init_db.py  loader.py  schema.py
docs/: component-hierarchy.md  component-hierarchy.txt  system-architecture.txt
etl/: etl.py
etl/cassandra/: Dockerfile  __init__.py  cassandra-init.sh
etl/station_datasets/: agard_data.parquet  azentkilyszabadja__szentkirályszabadja_data.parquet  bekescsaba_data.parquet  budapest__ferihegy_data.parquet  budapest_met_center_data.parquet  debrecen_data.parquet  eger_data.parquet  full_concat_data_cleaned.parquet  gyor_data.parquet  kaposvar_data.parquet  kecskemet_data.parquet  miskolc_data.parquet  nagykanizsa_data.parquet  nyiregyhaza__napkor_data.parquet  pecs__pogany_data.parquet  siofok_data.parquet  sopron_data.parquet  szeged_data.parquet  szombathely_data.parquet  (+2 more)
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
model/: Dockerfile  precipation.py  temperature_model.py  weather_condition_model.py
(+58 files in other folders)
